--- a/code/search.css
+++ b/code/search.css
@@ -10,8 +10,8 @@
 }
 
 div.background {
-    background-image: url('http://jllsly.com/wallpapers/xleague-of-legends-championship-thresh-wallpaper-hd-Is-Cool-Wallpapers.jpg.pagespeed.ic.bGHURPnUvZ.jpg');
+    background-image: url('https://sethwinternight.files.wordpress.com/2012/10/76108fd8b2cf2a7e0cf6d177dabdfa9c_2-nphd.jpg');
     background-size: cover;
-    background-color: #000000;
-    border: 2px solid black;
+    background-color: #fcfcfc;
+    border: 100px solid black;
 }
