don't even try it

--- a/code/search.css
+++ b/code/search.css
@@ -10,7 +10,7 @@
 }
 
 div.background {
-    background-image: url('https://sethwinternight.files.wordpress.com/2012/10/76108fd8b2cf2a7e0cf6d177dabdfa9c_2-nphd.jpg');
+    background-image: url('https://s3.amazonaws.com/battlefy-user-generated-assets/users/559e1ef56a27d84300d67094/5707292bf993038512cefc7d.jpg');
     background-size: cover;
     background-color: #fcfcfc;
     border: 100px solid black;
